--- a/playbooks/stack_status.yml
+++ b/playbooks/stack_status.yml
@@ -22,7 +22,7 @@
     - name: verify mysql service
       command: service mysql status
     - name: verify mysql listening on 3306
-      wait_for: port=3306 timeout=1
+      wait_for: host={{ ansible_eth0.ipv4.address }} port=3306 timeout=1
 
 - hosts: control
   tasks:
@@ -53,7 +53,7 @@
       register: app_index
 
     - fail: msg="index failed to return content"
-      when: "'Hello, from sunny {{ item.item }}' not in item.content"
+      when: "'Hello, from sunny {{item.item}}' not in item.content"
       with_items: "{{ app_index.results }}"
 
     - name: verify backend db response
